# bevy_katana

./: .gitmodules  Cargo.toml  README.md
bevy_ghx_destruction/: Cargo.toml
bevy_ghx_destruction/src/: lib.rs  types.rs  utils.rs
bevy_ghx_destruction/src/slicing/: slicing.rs
bevy_katana/: Cargo.toml
bevy_katana/src/: types.rs  utils.rs
bevy_katana/src/slicing/: slicing.rs
examples/: Cargo.toml
examples/.cargo/: config.toml
examples/assets/: cube_frac.glb  cube_frac_split.glb  dragon_frac.glb  dragon_low_poly.glb
examples/examples/: fracturing.rs  prefracture.rs  slicing.rs  slicing_demo.rs
examples/src/: ball.rs  fps.rs  fracturing.rs  joint.rs  lib.rs  plugin.rs  prefracture.rs
examples/src/slicing/: slicing.rs
