[package]
name = "bevy_katana"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
ghx_constrained_delaunay = { git = "https://github.com/Henauxg/ghx_constrained_delaunay.git", version = "0.2.0" }

# External dependencies
bevy = { version = "0.14.0", default-features = false, features = [] }
rand = "0.8.5"
ordered-float = "4.2.0"
glam = { version = ">=0.21, <=0.28" }
lazy_static = "1.4.0"
