[package]
name = "examples"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
# Internal dependencies
bevy_katana = { version = "0.1.0", path = "../bevy_katana" }
bevy_ghx_utils = { version = "0.4.0", default-features = true }

bevy = { version = "0.14", default-features = false, features = [
    # Default features:

    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_gilrs",         # Adds gamepad support
    "bevy_gizmos",        # Adds support for rendering gizmos
    "bevy_gltf",          # glTF support
    "bevy_render",        # Rendering framework core
    "bevy_pbr",           # 3D (physically-based) rendering
    "bevy_scene",         # Provides scene functionality
    "bevy_state",         #	Enable built in global state machines
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit
    "bevy_winit",         # winit window and input backend
    "default_font",       # Embed a minimal default font for text/UI
    "multi_threaded",     # Run with multithreading
    "tonemapping_luts",   # Support different camera Tonemapping modes (enables KTX2+zstd)

    # Platform-specific:
    "x11", # Linux: Support X11 windowing system

    # Non-default features:

    # Platform-specific:
    "wayland", # (Linux) Support Wayland windowing system
    # Development/Debug features:
    "dynamic_linking", # Dynamic linking for faster compile-times
] } # External dependencies
# Does not seem to compile without this explicit include...
bevy_gltf = { version = "0.14", default-features = false }
bevy_rapier3d = { version = "0.27.0", features = [
    "simd-stable",
    "debug-render-3d",
] }
bevy-inspector-egui = "0.25"
bevy_mod_raycast = "0.18.0"
bevy_tweening = "0.11"
rand = "0.8.5"

# bevy_mod_billboard = { version = "0.6.0", git = "https://github.com/kulkalkul/bevy_mod_billboard.git" }
